# halp

./: .codespellignore  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  SECURITY.md  cliff.toml  codecov.yml  committed.toml  deny.toml  halp.toml  release.sh
.github/: PULL_REQUEST_TEMPLATE.md  bors.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cd.yml  ci.yml  docker.yml
config/: halp.toml
src/: args.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs  plz_menu.rs
src/helper/: mod.rs  tty.rs
src/helper/args/: common.rs  mod.rs
src/helper/docs/: cheat.rs  cheat_sh.rs  cheatsheets.rs  cmd_parse.rs  eg.rs  man.rs  mod.rs  template.rs
src/helper/docs/handlers/: command.rs  fetch.rs  file.rs  mod.rs
tests/: integration.rs
