[package]
name = "halp"
version = "0.1.7" # bumped by release.sh
description = "A CLI tool to get help with CLI tools 🐙"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/halp"
repository = "https://github.com/orhun/halp"
categories = ["command-line-utilities"]
keywords = ["cli", "help"]
default-run = "halp"
edition = "2021"
rust-version = "1.70.0"

[[bin]]
name = "halp-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "halp-mangen"
path = "src/bin/mangen.rs"

[[bin]]
name = "halp-test"
path = "src/bin/test.rs"

[dependencies]
clap = { version = "4.5.4", features =["derive", "env", "wrap_help"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
colored = "2.1.0"
console = "0.15.8"
dialoguer = { version = "0.11.0", default-features = false }
dirs = "5.0.1"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
toml = "0.8.12"
ureq = "2.9.6"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
