[package]
name = "halp"
version = "0.2.0" # bumped by release.sh
description = "A CLI tool to get help with CLI tools 🐙"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/halp"
repository = "https://github.com/orhun/halp"
categories = ["command-line-utilities"]
keywords = ["cli", "help"]
default-run = "halp"
edition = "2021"
rust-version = "1.74.1"

[[bin]]
name = "halp-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "halp-mangen"
path = "src/bin/mangen.rs"

[[bin]]
name = "halp-test"
path = "src/bin/test.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
colored = "2.2.0"
console = "0.15.10"
dialoguer = { version = "0.11.0", default-features = false }
dirs = "5.0.1"
process_control = "5.0.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.7"
toml = "0.8.19"
ureq = "2.12.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
